--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <header>
     <h1>Couch Potato Assistant</h1>
 </header>
-<!-- Be sure to hide API_KEY in env file before pushing -->
 <body>
 
     <section class="cover">
@@ -24,18 +23,17 @@
         <button id="searchBtn">Search</button>
     </form>
 
-    <main>
+    <section>
         <h2>How To</h2>
         <p class="usageParagraph">
         Have you ever had that debate with someone that a certain actor was in a movie? Well, I've the solution for you! 
         To get started, type in the name of a movie in the search box above. Once you hit the search button, the API will return a result based off of what you've searched. 
         I'll have the results displayed below and see about keeping a history or recently searched movies.
         </p>
+    </section>
+    <Main id="resultsContainer">
 
-        <section id="results">
-
-        </section>
-    </main>
+    </Main>
 
     <script src="js/index.js"></script>
 </body>
