Saving a favicon to the site. Also implemented max-width for components

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="shortcut icon" type="image/x-icon" href=".Assets/Favicon.ico"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
-    <!-- <script defer src="js/index.js"></script> -->
     <title>Couch Potato Assistant</title>
 </head>
 
@@ -23,7 +22,7 @@
         <button id="searchBtn">Search</button>
     </form>
 
-    <section>
+    <section class="howToContainer">
         <h2>How To</h2>
         <p class="usageParagraph">
         Have you ever had that debate with someone that a certain actor was in a movie? Well, I've the solution for you! 
