Saving some style changes. Added modal for when user doesn't enter anything into search field.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         <button id="searchBtn">Search</button>
     </form>
 
+    <section id="errorModal">
+        <div class="modalContent">
+            <button id="closeModal">X</button>
+            <h3 id="errorPrompt"></h3>
+        </div>
+    </section>
+
     <section class="howToContainer">
         <h2>How To</h2>
         <p class="usageParagraph">
